<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".homeFragment">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_10ssp"
        >
        <LinearLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >

            <TextView
                android:id="@+id/scanText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:text="@string/image_scan"
                android:textColor="@color/red"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Image"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:textStyle="bold"
            />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_9sdp"
        >



        <RelativeLayout
            android:id="@+id/textScan"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10ssp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/bg"
            >

            <ImageView
                android:id="@+id/imagecsn"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/gallary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_image"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_below="@id/imagecsn"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pdfReader"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10ssp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/bg"            >

            <ImageView
                android:id="@+id/textScan1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/pdf"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdf_viewer"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_below="@id/textScan1"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>